# flow-on

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  PERFORMANCE.md  README.md  Resource.h  build.ps1  flow-on.cpp  flow-on.rc  flow-on.sln  flow-on.vcxproj  install.ps1  setup-github.ps1
.github/workflows/: build.yml
.qoder/repowiki/en/content/: Configuration Management.md  Development Guide.md  Getting Started.md  Troubleshooting.md
.qoder/repowiki/en/content/API Reference/: API Reference.md  Audio Manager API.md  Configuration Manager API.md  Dashboard API.md  Formatter API.md  Injector API.md  Overlay API.md  Snippet Engine API.md  Transcriber API.md
.qoder/repowiki/en/content/Architecture Overview/: Architecture Overview.md  Component Interactions.md  Data Flow Architecture.md  State Machine Design.md  Threading Model.md
.qoder/repowiki/en/content/Core Components/: Audio Manager.md  Configuration Manager.md  Core Components.md  Dashboard Interface.md  Overlay System.md  Snippet Engine.md  Text Formatter.md  Text Injector.md  Transcriber.md
.qoder/repowiki/en/content/Features and Usage/: Dashboard Interface.md  Features and Usage.md  Hotkey System.md  Snippet Engine.md  System Tray Integration.md  Text Formatting and Modes.md  Text Injection System.md  Visual Feedback System.md
.qoder/repowiki/en/content/Performance and Optimization/: GPU Acceleration.md  Latency Optimization.md  Memory Management.md  Performance and Optimization.md  Profiling and Benchmarking.md
.qoder/repowiki/en/content/Project Overview/: Architecture Overview.md  Features Showcase.md  Getting Started.md  Project Overview.md  Technology Stack.md
.qoder/repowiki/en/meta/: repowiki-metadata.json
assets/: README.txt  generate_icons.ps1  settings.default.json
docs/plans/: 2026-03-21-lazy-model-unload-design.md
installer/: flow-on.nsi
src/: audio_manager.cpp  audio_manager.h  config_manager.cpp  config_manager.h  dashboard.cpp  dashboard.h  dashboard_old.cpp  formatter.cpp  formatter.h  injector.cpp  injector.h  main.cpp  overlay.cpp  overlay.h  snippet_engine.cpp  snippet_engine.h  transcriber.cpp  transcriber.h
